# fincrime-ml

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_SCHEDULE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data_dictionary.md
docs/adr/: 001-dual-domain.md
fincrime_ml/: __init__.py
fincrime_ml/core/: base.py
fincrime_ml/core/data/: loaders.py  synth_aml.py  synth_cards.py  typology_injector.py
fincrime_ml/fraud/: evaluation.py  explain.py  features.py  imbalance.py
fincrime_ml/fraud/models/: logistic_baseline.py  xgb_classifier.py
notebooks/: fraud_detection.ipynb
tests/test_core/: test_loaders.py  test_synth_aml.py  test_synth_cards.py  test_typology_injector.py
tests/test_fraud/: test_evaluation.py  test_explain.py  test_features.py  test_imbalance.py  test_logistic_baseline.py  test_xgb_classifier.py
